app/manifests/api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  selector:
    matchLabels:
      app: api-server
  replicas: 1
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - name: api-server
        image: lamooon/app-api
        ports:
        - containerPort: 5050
