app/manifests/blog-ui-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  selector:
    matchLabels:
      app: ui
  replicas: 1
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: lamooon/app-ui
        imagePullPolicy: Always
        
        ports:
        - containerPort: 3000
