app/manifests/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-ui-svc
spec:
  selector:
    app: blog-ui-dep
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  type: ClusterIP
